Skeleton for weld extension.