@@ -10,22 +10,34 @@
     <properties>
         <version.plugin.compiler>3.8.1</version.plugin.compiler>
         <version.plugin.jar>3.1.2</version.plugin.jar>
+
+        <!-- TODO need to sync these with Helidon. Can use new dependencies pom? -->
+
+        <version.lib.weld>3.1.1.Final</version.lib.weld>
+        <version.lib.annotation-api>1.3.1</version.lib.annotation-api>
     </properties>
 
     <modules>
         <module>agent</module>
+        <module>weld</module>
         <module>plugin</module>
     </modules>
 
-    <dependencies>
-        <!--
-                <dependency>
-                    <groupId>org.jsoup</groupId>
-                    <artifactId>jsoup</artifactId>
-                    <version>1.11.3</version>
-                </dependency>
-        -->
-    </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${version.lib.annotation-api}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jboss.weld.environment</groupId>
+                <artifactId>weld-environment-common</artifactId>
+                <version>${version.lib.weld}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <build>
         <plugins>
             <plugin>
@@ -37,6 +49,8 @@
                     <target>11</target>
                     <compilerArgs>
                         <arg>--add-exports="java.base/jdk.internal.module=helidon.jlink"</arg>
+                        <arg>--add-exports="java.base/jdk.internal.org.objectweb.asm=helidon.jlink"</arg>
+                        <arg>--add-exports="java.base/jdk.internal.org.objectweb.asm.commons=helidon.jlink"</arg>
                         <arg>--add-exports="jdk.jlink/jdk.tools.jlink.plugin=helidon.jlink"</arg>
                         <arg>--add-exports="jdk.jlink/jdk.tools.jlink.internal=helidon.jlink"</arg>
                     </compilerArgs>
